name: tcache-persistent
version: 0.0.1
cabal-version: >=1.2
build-type: Simple
license: GPL
license-file: ""
homepage: http://haskell-web.blogspot.com
synopsis: TCache bindings for the persistent package
description:
data-dir: ""

library
    hs-source-dirs: src .

    build-depends:  base, TCache, persistent, persistent-template,conduit, monad-logger,
                    persistent-sqlite, transformers

    exposed-modules: Data.TCache.Persistent.Sqlite
